Add production deployment configs, env var support, and CI pipeline
- render.yaml: Render Blueprint for backend + PostgreSQL
- vercel.json: Vercel SPA rewrites with API proxy to Render
- Dockerfile: Multi-stage container with Maven build + Python ML runtime
- CI: GitHub Actions workflow for backend (Maven) and frontend (npm) builds
- Env vars: All hardcoded paths/configs replaced with
- CORS: Configurable via ALLOWED_ORIGINS env var
- Prod profile: ddl-auto=validate, no SQL logging